# wakanda-protocol

./: .env.prod  .gitignore  README.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  run_dev.py
backend/: .gitignore  README.md  erl_crash.dump  gleam.toml  manifest.toml  mix.exs
backend/config/: config.exs  runtime.exs  test.exs
backend/lib/: backend.ex
backend/lib/backend/: application.ex  config.ex  gleam_loader.ex  plugin.ex  plugin_manager.ex  plugin_supervisor.ex  repo.ex  router.ex
backend/lib/backend/plugin/: gleam.ex  noop.ex
backend/lib/backend/schema/: event.ex  protocol.ex
backend/priv/repo/: init-postgres.sh  init-postgres.sql  init.sql  seeds.exs
backend/src/: backend_gleam.gleam
backend/test/: backend_gleam_test.gleam  plugin_manager_test.exs  router_test.exs  test_helper.exs
backend/test/plugin/: noop_test.exs
backend/test/schema/: event_test.exs  protocol_test.exs
backend/test/support/: plugins.ex
frontend/: package.json
infra/docker/: docker-compose.yml  init.sql  nginx.conf
infra/k8s/: secrets.yaml  services.yaml
infra/terraform/: iam.tf  main.tf  outputs.tf  variables.tf
scripts/: deploy.py  setup-db.sh
services/drones/: Dockerfile  main.py
services/finance/: Dockerfile  main.py  requirements.txt
services/knowledge_hub/: Dockerfile  main.py
services/minerals/: Dockerfile  main.py  requirements.txt
tests/: test_basic.py
wakanda/: __init__.py  __main__.py
wakanda/ai/: __init__.py
wakanda/api/: __init__.py  main.py
wakanda/api/routes/: __init__.py  ai.py  auth.py  fintech.py  governance.py  health.py  infrastructure.py  minerals.py
wakanda/core/: __init__.py  config.py  security.py
wakanda/fintech/: __init__.py
wakanda/governance/: __init__.py
wakanda/infrastructure/: __init__.py
wakanda/minerals/: __init__.py
wakanda/security/: __init__.py
(+1 files in other folders)
